- Reorganize settings tabs - Ability to change wallpaper - Displaying tabs in the settings panel in a tree format + search engine